<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainActivity_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/main_activity_login_text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerActivity_hasAccount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mainActivity_layout_textView_MarginLeft"
        android:layout_marginTop="36dp"
        android:layout_marginRight="@dimen/mainActivity_layout_textView_MarginRight"
        android:text="@string/main_activity_register_account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivity_login_button" />

    <TextView
        android:id="@+id/registerActivity_login_onEditTextPassw"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerActivity_username_editText" />

    <TextView
        android:id="@+id/registerActivity_login_onEditTextUser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivity_login_text" />

    <TextView
        android:id="@+id/mainActivity_login_textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainActivity_layout_textView_MarginLeft"
        android:layout_marginLeft="@dimen/mainActivity_layout_textView_MarginLeft"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/mainActivity_layout_textView_MarginRight"
        android:layout_marginRight="@dimen/mainActivity_layout_textView_MarginRight"
        android:text="Pozabil geslo?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerActivity_hasAccount_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mainActivity_login_button"

        style="@style/AppTheme.Button"
        android:layout_marginTop="24dp"
        android:onClick="MainActivity_login_button"
        android:text="@string/main_activity_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerActivity_password_editText" />

    <EditText
        android:id="@+id/registerActivity_username_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="E-mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerActivity_login_onEditTextUser" />

    <EditText
        android:id="@+id/registerActivity_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Geslo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerActivity_login_onEditTextPassw" />

</androidx.constraintlayout.widget.ConstraintLayout>